# Sunset3d

./: CMakeLists.txt  README.md
laptop/msvc/: Sunset3D.dsp
laptop/resource/: resource.h  resource.rc
laptop/source/: CGLBox.cpp  CGLBox.h  CGLCamera.h  CGLMaterial.cpp  CGLMaterial.h  CGLMesh.cpp  CGLMesh.h  CGLObject.cpp  CGLObject.h  CGLScene.cpp  CGLScene.h  CGLWindow.cpp  CGLWindow.h  CMainFrame.cpp  CMainFrame.h  fileformat.h
laptop/source/inc/: mathlib.c  mathlib.h
msvc/: Sunset3D.dsp  Sunset3D.dsw
resource/: resource.h
source/: CGLBox.cpp  CGLBox.h  CGLCamera.h  CGLLight.cpp  CGLLight.h  CGLMaterial.cpp  CGLMaterial.h  CGLMesh.cpp  CGLMesh.h  CGLModel.cpp  CGLModel.h  CGLObject.cpp  CGLObject.h  CGLScene.cpp  CGLScene.h  CGLWindow.cpp  CGLWindow.h  CMainFrame.cpp  CMainFrame.h  CPanel.cpp  CPanel.h  CWin.cpp  test.txt
source/controls/: CCommonDialogs.cpp  CControl.cpp  CFolderView.cpp  CList.cpp  CList.h
source/inc/: fileformat.h  mathlib.c  ms3dspec.h
